Remove Fucking Temp Account

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "poipoi_token": "d4ca85a58cf408aa4e614b79a7244be5",
-    "poipoi_sessionhash": "SHASH%3A70d763e3e651d5ef4f6abe033e5239d8"
+    "poipoi_token": "",
+    "poipoi_sessionhash": ""
 }
